fix: bohr's model color contrast

--- a/src/main/resources/ir/shahriari/periodictable/themes/dark-theme.css
+++ b/src/main/resources/ir/shahriari/periodictable/themes/dark-theme.css
@@ -212,3 +212,11 @@ Text {
 .slider .track {
     -fx-background-color: #313335;
 }
+
+.core {
+    -fx-fill: #D32143;
+}
+
+.electron {
+    -fx-fill: #2196F3;
+}
